# chamelamp

./: .gitignore  CMakeLists.txt  README.md  sdkconfig.defaults
components/TCS34725_colorsensor/: CMakeLists.txt  TCS34725_colorsensor.c  TCS34725_helper_functions.c
components/TCS34725_colorsensor/include/: TCS34725_colorsensor.h  TCS34725_colorsensor_private.h  TCS34725_helper_functions.h  Untitled-25.c  rgb_types.h
components/esp_now_handler/: CMakeLists.txt  esp_now_receiver.c  esp_now_sender.c
components/esp_now_handler/include/: esp_now_handler.h
components/lcd1602/: CMakeLists.txt  lcd1602.c  lcd_animation.c
components/lcd1602/include/: lcd1602.h  lcd1602_private.h
components/neopixel_ring/: CMakeLists.txt  neopixel_ring.c
components/neopixel_ring/include/: neopixel_ring.h
components/nvs_handler/: CMakeLists.txt  nvs_handler.c
components/nvs_handler/include/: nvs_handler.h
components/wifi_manager/: wifi_manager.c
components/wifi_manager/include/: wifi_manager.h
main/: CMakeLists.txt  Kconfig.projbuild  main.c  pin_map.h
